siri intents first add and voice to text

--- a/ACT Voice Demo WatchKit Extension/Info.plist
+++ b/ACT Voice Demo WatchKit Extension/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSSiriUsageDescription</key>
+	<string>You can use Siri with this app to dictate your needs.</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>You can dictate where you want to navigate to with your voice.</string>
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionAttributes</key>
